# MiniPhotoshop

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main2.cpp  maincpu.cpp  maingpu.cpp  oldcmake.txt
cpusrc/: image.cpp
gpusrc/: imageProcessing.cu
include/: image.h
media/: images.txt  minitext.txt
